--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-*.py[cod]
+# byte-compiled Python files
+*.py[co]
 
 # C extensions
 *.so
@@ -12,24 +13,22 @@ eggs
 parts
 bin
 var
-sdist
 develop-eggs
 .installed.cfg
-lib
-lib64
-
-# Installer logs
-pip-log.txt
+Makefile
 
 # Unit test / coverage reports
 .coverage
-.tox
-nosetests.xml
+coverage
 
 # Translations
 *.mo
 
 # Mr Developer
 .mr.developer.cfg
-.project
-.pydevproject
+
+# SublimeCodeIntel
+.codeintel
+
+# svn
+.svn
